--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -173,6 +173,44 @@ button, a, [type="submit"]{
   }
 }
 
+.content{
+  padding: 40px 0 80px;
+  h1{
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 130%;
+    color: var(--text-black);
+    @media(min-width:992px){
+      font-size: 42px;
+      position: absolute;
+      left: 16px; top: 0;
+      max-width: 345px;
+    }
+  }
+  .container{
+    position: relative;
+    @media(min-width:992px){
+      padding-left: 345px;
+    }
+  }
+  h2{
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 140%;
+    color: var(--text-black);
+    margin-bottom: 8px;
+  }
+  p{
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 140%;
+    color: var(--text-black);
+    & + h2{
+      margin-top: 32px;
+    }
+  }
+}
+
 .animate__heightOut {
   animation-name: heightOut;
   opacity: 1;
