added docx and pdf-lib

--- a/assets/scss/_functions.scss
+++ b/assets/scss/_functions.scss
@@ -5,7 +5,7 @@ $width-px: ($width)+px;
 }
 
 @function cqi($fz){
-  @return $fz / $width * 100cqi;
+  @return calc($fz / $width * 100cqi);
 }
 
 @function rem($px){
