--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -147,7 +147,7 @@ button, a, [type="submit"]{
 }
 
 .field{
-  input, textarea{
+  input, textarea, select{
     outline: none !important;
     background: none;
     border: none;
