--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -159,6 +159,7 @@ button, a, [type="submit"]{
     line-height: 140%;
     color: var(--text-black);
     padding: 4px 0;
+    transition: .3s ease;
     &[type="submit"]{
       padding: 16px;
       height: res(60, 70);
@@ -173,6 +174,10 @@ button, a, [type="submit"]{
     &.disabled, &:disabled {
       opacity: 0.5;
       cursor: wait;
+    }
+    &.err{
+      border-color: var(--brand-red);
+      box-shadow: 0 0 8px var(--brand-red) inset;
     }
   }
   textarea{
